...
    
    var body: some View {
        VStack(spacing: 30) {
            HStack {
                HStack {
                    Text(sizeFilterTitle)
                    Image(systemName: expand ? "chevron.up" : "chevron.down").accessibility(identifier: "sizeFilter") // For UI testing
                }.onTapGesture {// Opens selectable list of sizes
                    self.expand.toggle()
                }
                // Button to remove size filter
                Button(action: {
                    self.searchBySize = ""
                    self.sizeFilterTitle = "Size: "
                }) {
                    if (self.searchBySize.count > 0) {
                        Image(systemName: "x.circle.fill")
                            .foregroundColor(.black)
                    }
                }.accessibility(identifier: "removeSizeFilter") // For UI testing
            }
            // If size filter choises button is toggled open
            if expand {
                // Lists selectable sizes
                ForEach(sizes, id: \.self) { size in
                    Button(action: {
...
