...
    @State var prices = ["0 - 10", "10 - 20", "20 - 30", "30 - 40", "40 - 50", "50 - 60", "60 - 70", "70 - 80", "80 - 90"]
    var body: some View {
        VStack(spacing: 30) {
            HStack {
                HStack {
                    Text(priceFilterTitle)
                    Image(systemName: expand2 ? "chevron.up" : "chevron.down").accessibility(identifier: "priceFilter") // For UI testing
                }.onTapGesture { // Opens selectable list of prices
                    self.expand2.toggle()
                }
                // Button to remove price filter
                Button(action: {
                    self.searchByPrice = ""
                    self.priceFilterTitle = "Price: "
                }) {
                    if (self.searchByPrice.count > 0) {
                        Image(systemName: "x.circle.fill").foregroundColor(.black)
                    }
                }.accessibility(identifier: "removePriceFilter") // For UI testing
            }
            // If price filter choises button is toggled open
            if expand2 {
                // Lists selectable prices
                ForEach(prices, id: \.self) { price in
                    // VStack(alignment: .leading, spacing: 0) {
...
