...
"signInTitle" = "Sign in";
"emailHint" = "Email";
"pswdHint" = "Password";

// MARK: Notification
"openText" = "Open";
"cancelText" = "Cancel";

// MARK: EmployeeView

"welcomeText" = "Welcome";
"welcomeText2" = "to the employee view";
"employeeTitle" = "Employee View";
...
